Made reset button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <option>Scissors</option>
                         </select>
                     <button id="go-button" class="btn btn-success">Go!</button>
+                    <button id="reset-game-button" class="btn btn-primary">Reset</button>
                 <p id="game-history"></p>
                     </div>
                 </form>
